# awq

./: README.md  awq.py  compare.py  main.py  pyproject.toml  rtn.py  utils.py
configs/: pythia_small.yaml
results/: 14m.txt  31m.txt  70m.txt
src/awq_repro/: __init__.py  awq.py  collect_acts.py  data.py  eval_ppl.py  model.py  quant.py  run_table.py
tests/: test_scaffold.py
