[project]
name = "awq-repro"
version = "0.0.0"
description = "Scaffold for reproducing AWQ perplexity experiments on small Pythia models."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
awq-run-table = "awq_repro.run_table:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
